k8s/exem-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: exem-nginx
  name: exem-nginx
  namespace: exem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exem-nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: exem-nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
